--- a/SpringbootBuoi1/src/main/resources/application.properties
+++ b/SpringbootBuoi1/src/main/resources/application.properties
@@ -1,2 +1,7 @@
-server.port=8080
-server.servlet.context-path=
+server.port=8081
+server.servlet.context-path=/
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+spring.messages.basename=lang/message
+spring.messages.encoding=UTF-8
